core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__column_matching_rules-4.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT not_exists::tag FROM data\")"
snapshot_kind: text
---
EmptyRelation: rows=0 [iox::measurement:Dictionary(Int32, Utf8)]
